Improve theme colors

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="grey">#AFAFAFAF</color>
+    <color name="font1">#1E1E1E</color>
+    <color name="font2">#E1E2E3</color>
+    <color name="button1">#FFFFFF</color>
+    <color name="button2">#484C4F</color>
+    <color name="background1">#E8EAED</color>
+    <color name="background2">#292E33</color>
 </resources>
