--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,36 +1,18 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- Base application theme. -->
     <style name="Theme.OldSakhaKeyboard" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <!--<item name="colorPrimary">@color/purple_500</item>-->
-        <!--<item name="colorPrimaryVariant">@color/purple_700</item>-->
-        <!--<item name="colorOnPrimary">@color/white</item>-->
-        <!-- Secondary brand color. -->
-        <!--<item name="colorSecondary">@color/teal_200</item>-->
-        <!--<item name="colorSecondaryVariant">@color/teal_700</item>-->
-        <!--<item name="colorOnSecondary">@color/black</item>-->
-        <!-- Status bar color. -->
-        <!--<item name="android:statusBarColor">?attr/colorPrimaryVariant</item>-->
+        <!-- Цвет шрифта -->
+        <item name="android:colorForeground">@color/font1</item>
 
-        <!-- Customize your theme here. -->
+        <!-- Цвет фона кнопок -->
+        <item name="android:colorButtonNormal">@color/button1</item>
 
-        <!-- Works -->
-<!--<item name="android:background">@color/grey</item>-->
-        <item name="android:buttonStyle">@style/Theme.Buttons</item>
-    </style>
+        <!-- Цвет клавиатуры -->
+        <item name="android:background">@color/background1</item>
 
-    <style name="Theme.Buttons" parent="Widget.MaterialComponents.Button.TextButton">
+        <!-- Шрифт -->
         <item name="android:fontFamily">@font/noto_sans_display</item>
-        <item name="android:fontFeatureSettings">normal</item>
-<!--<item name="android:itemBackground">@color/white</item>-->
-<!--<item name="android:colorBackground">@color/white</item>-->
-<!--<item name="android:colorPrimary">@color/white</item>-->
-<!--<item name="android:color">@color/black</item>-->
-<!--<item name="android:colorBackground">@color/white</item>-->
-<!--<item name="android:colorForeground">@color/white</item>-->
-<!--<item name="android:drawable"></item>-->
-<!--<item name="android:background">@drawable/ic_launcher_background</item>-->
-<!--<item name="android:drawable">@drawable/ic_launcher_foreground</item>-->
-    </style>
 
+        <!-- Отключаем капс -->
+        <item name="android:textAllCaps">false</item>
+    </style>
 </resources>
