--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,23 +1,18 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.OldSakhaKeyboard2" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <!--<item name="colorPrimary">@color/purple_200</item>-->
-        <!--<item name="colorPrimaryVariant">@color/purple_700</item>-->
-        <!--<item name="colorOnPrimary">@color/black</item>-->
-        <!-- Secondary brand color. -->
-        <!--<item name="colorSecondary">@color/teal_200</item>-->
-        <!--<item name="colorSecondaryVariant">@color/teal_200</item>-->
-        <!--<item name="colorOnSecondary">@color/black</item>-->
-        <!-- Status bar color. -->
-        <!--<item name="android:statusBarColor">?attr/colorPrimaryVariant</item>-->
-        <!-- Customize your theme here. -->
-        <item name="android:buttonStyle">@style/Theme.Buttons</item>
-    </style>
+    <style name="Theme.OldSakhaKeyboard" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <!-- Цвет шрифта -->
+        <item name="android:colorForeground">@color/font2</item>
 
-    <style name="Theme.Buttons" parent="Widget.MaterialComponents.Button.TextButton">
-        <item name="android:colorPrimary">@color/white</item>
-        <item name="android:colorAccent">@color/black</item>
+        <!-- Цвет фона кнопок -->
+        <item name="android:colorButtonNormal">@color/button2</item>
+
+        <!-- Цвет клавиатуры -->
+        <item name="android:background">@color/background2</item>
+
+        <!-- Шрифт -->
         <item name="android:fontFamily">@font/noto_sans_display</item>
+
+        <!-- Отключаем капс -->
+        <item name="android:textAllCaps">false</item>
     </style>
 </resources>
